@@ -39,15 +39,14 @@ import ucar.nc2.Dimension;
 import ucar.unidata.geoloc.vertical.HybridSigmaPressure;
 import ucar.unidata.util.Parameter;
 
-import java.util.StringTokenizer;
-
 /**
  * Create a atmosphere_hybrid_sigma_pressure_coordinate Vertical Transform from the information in the Coordinate Transform Variable.
  *  *
  * @author caron
  */
 public class VAtmHybridSigmaPressure extends AbstractCoordTransBuilder {
-  private String a = "", b = "", ps = "", p0 = "";
+  private boolean useAp;
+  private String a, b, ps, p0, ap;
 
   public String getTransformName() {
     return "atmosphere_hybrid_sigma_pressure_coordinate";
@@ -61,29 +60,47 @@ public class VAtmHybridSigmaPressure extends AbstractCoordTransBuilder {
     String formula_terms = getFormula(ds, ctv);
     if (null == formula_terms) return null;
 
-     // parse the formula string
-    String[] values = parseFormula(formula_terms, "a b ps p0");
-    if (values == null) return null;
-
-    a = values[0];
-    b = values[1];
-    ps = values[2];
-    p0 = values[3];
+    useAp = formula_terms.indexOf("ap:") >= 0;
 
     CoordinateTransform rs = new VerticalCT("AtmHybridSigmaPressure_Transform_"+ctv.getShortName(), getTransformName(), VerticalCT.Type.HybridSigmaPressure, this);
     rs.addParameter(new Parameter("standard_name", getTransformName()));
     rs.addParameter(new Parameter("formula_terms", formula_terms));
 
-    rs.addParameter(new Parameter("formula", "pressure(x,y,z) = a(z)*p0 + b(z)*surfacePressure(x,y)"));
-    if (!addParameter(rs, HybridSigmaPressure.PS, ds, ps)) return null;
-    if (!addParameter(rs, HybridSigmaPressure.A, ds, a)) return null;
-    if (!addParameter(rs, HybridSigmaPressure.B, ds, b)) return null;
-    if (!addParameter(rs, HybridSigmaPressure.P0, ds, p0)) return null;
+     // parse the formula string
+    if (useAp) {
+      String[] values = parseFormula(formula_terms, "ap b ps");
+      if (values == null) return null;
+
+      ap = values[0];
+      b = values[1];
+      ps = values[2];
+
+      rs.addParameter(new Parameter("formula", "pressure(x,y,z) = ap(z) + b(z)*surfacePressure(x,y)"));
+      if (!addParameter(rs, HybridSigmaPressure.PS, ds, ps)) return null;
+      if (!addParameter(rs, HybridSigmaPressure.AP, ds, ap)) return null;
+      if (!addParameter(rs, HybridSigmaPressure.B, ds, b)) return null;
+
+    } else {
+      String[] values = parseFormula(formula_terms, "a b ps p0");
+      if (values == null) return null;
+
+      a = values[0];
+      b = values[1];
+      ps = values[2];
+      p0 = values[3];
+
+      rs.addParameter(new Parameter("formula", "pressure(x,y,z) = a(z)*p0 + b(z)*surfacePressure(x,y)"));
+      if (!addParameter(rs, HybridSigmaPressure.PS, ds, ps)) return null;
+      if (!addParameter(rs, HybridSigmaPressure.A, ds, a)) return null;
+      if (!addParameter(rs, HybridSigmaPressure.B, ds, b)) return null;
+      if (!addParameter(rs, HybridSigmaPressure.P0, ds, p0)) return null;
+    }
+
     return rs;
   }
 
   public String toString() {
-    return "HybridSigma:" + "ps:"+ps + " p0:"+p0 + " a:"+a + " b:"+b;    
+    return  "HybridSigmaPressure:" + (useAp ? "ps:"+ps + " p0:"+p0 + " a:"+a + " b:"+b : "ps:"+ps + " ap:"+ap + " b:"+b);
   }
 
   public ucar.unidata.geoloc.vertical.VerticalTransform makeMathTransform(NetcdfDataset ds, Dimension timeDim, VerticalCT vCT) {
